[gd_scene load_steps=3 format=3 uid="uid://88vwolggeq70"]

[ext_resource type="Script" path="res://games/vsKayla/game.gd" id="1_hkofs"]
[ext_resource type="Texture2D" uid="uid://q5vh3ph1acbg" path="res://icon.svg" id="2_ukche"]

[node name="Game" type="Node2D"]
script = ExtResource("1_hkofs")
metadata/_edit_vertical_guides_ = [56.0, 376.0]

[node name="BorderL" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(-8, 98)
scale = Vector2(1, 4.32812)
texture = ExtResource("2_ukche")

[node name="BorderR" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(376, -150)
scale = Vector2(1, 4.14844)
texture = ExtResource("2_ukche")
centered = false

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(215, 51)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ukche")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 56.0
offset_top = -1.0
offset_right = 376.0
offset_bottom = 240.0

[node name="Cursor" type="Sprite2D" parent="Control"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ukche")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Panel" type="Panel" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MenuCommands" type="GridContainer" parent="Control/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="Cmd1" type="Button" parent="Control/VBoxContainer/MarginContainer/MenuCommands"]
layout_mode = 2
text = "Item1"

[node name="Cmd2" type="Button" parent="Control/VBoxContainer/MarginContainer/MenuCommands"]
layout_mode = 2
text = "Item1"

[node name="Cmd3" type="Button" parent="Control/VBoxContainer/MarginContainer/MenuCommands"]
layout_mode = 2
text = "Item1"

[node name="Cmd4" type="Button" parent="Control/VBoxContainer/MarginContainer/MenuCommands"]
layout_mode = 2
text = "Item1"

[node name="TextLabel" type="Label" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "* You feel like you've seen this before.


"

[node name="StatsHbox" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LvlLabel" type="Label" parent="Control/VBoxContainer/StatsHbox"]
layout_mode = 2
text = "Lv 1"

[node name="HpLabel" type="Label" parent="Control/VBoxContainer/StatsHbox"]
layout_mode = 2
text = "HP 20/20"

[node name="ActionMenuMargin" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 8

[node name="ActionButtons" type="HBoxContainer" parent="Control/VBoxContainer/ActionMenuMargin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="FightButton" type="Button" parent="Control/VBoxContainer/ActionMenuMargin/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "FIGHT"

[node name="ActButton" type="Button" parent="Control/VBoxContainer/ActionMenuMargin/ActionButtons"]
layout_mode = 2
text = "ACT"

[node name="ItemButton" type="Button" parent="Control/VBoxContainer/ActionMenuMargin/ActionButtons"]
layout_mode = 2
text = "ITEM
"

[node name="MercyButton" type="Button" parent="Control/VBoxContainer/ActionMenuMargin/ActionButtons"]
layout_mode = 2
text = "MERCY
"
